<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.petbnbcodepath.SignupActivity">

    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        android:adjustViewBounds="true"
        android:src="@drawable/two_cats_summer_fishing"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_alignRight="@+id/etEmail"
        android:layout_alignEnd="@+id/etEmail"
        android:layout_marginTop="@dimen/logo_vert_dist"
        android:clickable="true"
        android:onClick="onLogin"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_button_padding"
        android:layout_marginStart="@dimen/login_button_padding"
        android:layout_marginRight="@dimen/login_button_padding"
        android:layout_marginEnd="@dimen/login_button_padding"
        android:background="@color/white"
        android:hint="@string/email_address"
        android:padding="@dimen/edit_text_padding"
        android:layout_below="@+id/tvLogin"
        android:layout_marginTop="@dimen/button_vert_distance"
        />
    <EditText
        android:id="@+id/etPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_button_padding"
        android:layout_marginStart="@dimen/login_button_padding"
        android:layout_marginRight="@dimen/login_button_padding"
        android:layout_marginEnd="@dimen/login_button_padding"
        android:background="@color/white"
        android:hint="@string/password"
        android:layout_below="@+id/etEmail"
        android:padding="@dimen/edit_text_padding"
        android:password="true"/>
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_button_padding"
        android:layout_marginStart="@dimen/login_button_padding"
        android:layout_marginRight="@dimen/login_button_padding"
        android:layout_marginEnd="@dimen/login_button_padding"
        android:background="@color/white"
        android:hint="@string/firstName"
        android:layout_below="@+id/etPwd"
        android:padding="@dimen/edit_text_padding"/>
    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_button_padding"
        android:layout_marginStart="@dimen/login_button_padding"
        android:layout_marginRight="@dimen/login_button_padding"
        android:layout_marginEnd="@dimen/login_button_padding"
        android:background="@color/white"
        android:hint="@string/lastName"
        android:layout_below="@+id/etFirstName"
        android:padding="@dimen/edit_text_padding"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLastName"
        android:layout_alignLeft="@+id/etLastName"
        android:layout_alignStart="@+id/etLastName"
        android:layout_alignRight="@+id/etLastName"
        android:layout_alignEnd="@+id/etLastName"
        android:layout_marginTop="@dimen/button_vert_distance"
        android:background="@color/theme_teal"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:enabled="false"
        android:alpha="0.2"
        android:onClick="onSignUp"/>
</RelativeLayout>
