<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgWhite"
    tools:context="com.codepath.petbnbcodepath.BookingDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_height"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:id="@+id/rlListingSummary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/listing_summary_height">

                <ImageView
                    android:id="@+id/ivCoverPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true" />

                <TextView
                    android:id="@+id/tvSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/ivCoverPicture"
                    android:layout_toRightOf="@+id/ivCoverPicture"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/dark_gray" />

                <TextView
                    android:id="@+id/tvNumReviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tvSummary"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/tvSummary"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/light_gray" />

                <TextView
                    android:id="@+id/tvCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/theme_teal" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:id="@+id/divBelowListingSummary"
             />

            <TextView
                android:id="@+id/tvDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/dark_gray"
                android:text="@string/dates"
                android:layout_marginTop="@dimen/book_det_dates_margin_top"
                android:layout_marginBottom="@dimen/book_det_dates_margin_bottom"/>

            <LinearLayout
                android:id="@+id/dateSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sel_dates_margin"
                android:layout_marginRight="@dimen/sel_dates_margin"
                android:layout_marginStart="@dimen/sel_dates_margin"
                android:layout_marginEnd="@dimen/sel_dates_margin"
                android:showDividers="middle"
                android:dividerPadding="2dp"
                >
                <Button
                    android:id="@+id/btnSelDropDates"
                    android:layout_width="@dimen/zero_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:paddingRight="@dimen/sel_dates_button_padding"
                    android:paddingLeft="@dimen/sel_dates_button_padding"
                    android:paddingTop="@dimen/sel_dates_button_padding"
                    android:paddingBottom="@dimen/sel_dates_button_padding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textAlignment="center"/>
                <Button
                    android:id="@+id/btnSelPickDates"
                    android:layout_width="@dimen/zero_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:textAllCaps="false"
                    android:paddingTop="@dimen/sel_dates_button_padding"
                    android:paddingBottom="@dimen/sel_dates_button_padding"
                    android:paddingRight="@dimen/sel_dates_button_padding"
                    android:paddingEnd="@dimen/sel_dates_button_padding"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textAlignment="center"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="@dimen/book_det_dates_margin_top"
                android:layout_marginBottom="@dimen/book_det_dates_margin_bottom"/>
            <ExpandableListView
                android:id="@+id/lvPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/expandable_lv_height"
                android:isScrollContainer="false"
                android:layout_marginLeft="@dimen/login_button_padding"
                android:layout_marginRight="@dimen/login_button_padding"
                android:layout_marginStart="@dimen/login_button_padding"
                android:layout_marginEnd="@dimen/login_button_padding"
                android:layout_marginBottom="@dimen/book_det_dates_margin_bottom"
                />
            <TextView
                android:id="@+id/tvOnlyCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/light_gray"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/only_charge"
                android:layout_marginLeft="@dimen/only_charge_margin"
                android:layout_marginStart="@dimen/only_charge_margin"
                android:layout_marginRight="@dimen/only_charge_margin"
                android:layout_marginEnd="@dimen/only_charge_margin"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/tvSayHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/dark_gray"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/book_det_dates_margin_top"
                android:layout_marginBottom="@dimen/book_det_dates_margin_bottom"/>
            <TextView
                android:id="@+id/tvSayHelloSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/light_gray"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/book_det_dates_margin_bottom"/>
            <EditText
                android:id="@+id/etMsgHost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/msg_host_height"
                android:hint="@string/msg_host"
                android:layout_marginLeft="@dimen/login_button_padding"
                android:layout_marginRight="@dimen/login_button_padding"
                android:layout_marginStart="@dimen/login_button_padding"
                android:layout_marginEnd="@dimen/login_button_padding"
                android:layout_marginBottom="@dimen/book_det_dates_margin_bottom"
                android:paddingLeft="@dimen/edit_text_padding"
                android:paddingStart="@dimen/edit_text_padding"
                android:paddingTop="@dimen/edit_text_padding"
                android:background="@color/white"
                android:gravity="top"
                android:nextFocusUp="@id/tvPrice"
                android:nextFocusLeft="@id/tvPrice"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_teal"
        android:textColor="@color/white"
        android:text="@string/req_to_book"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</LinearLayout>